Build instructions improved